WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19737
No cursor and paste not enabled right clicking text field/area
https://bugs.webkit.org/show_bug.cgi?id=19737
Summary
No cursor and paste not enabled right clicking text field/area
Matt Lilek
Reported
2008-06-23 21:43:52 PDT
1. Select some text on this page and copy it. 2. Right click the comments <textfield> on this page - notice that the Paste menu item is not enabled 3. Left click anywhere on the page (including in the <textfield> if you so desire) 4. Start typing - notice that the text appears in the <textfield> despite it having no cursor (hitting enter for a newline doesn't do anything) This also applies to <input type="text"> and isn't a regression from Safari 3.1.1, but is almost certainly a regression from Safari 2.
Attachments
naive fix
(55.27 KB, patch)
2009-02-11 03:46 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2008-12-31 14:21:30 PST
Looks like it's fixed in WebKit ToT.
Matt Lilek
Comment 2
2008-12-31 16:14:35 PST
(In reply to
comment #1
)
> Looks like it's fixed in WebKit ToT. >
Nope, just reproduced with my original instructions with ToT + Safari 3.2.1 on both Leopard and Vista.
Alexey Proskuryakov
Comment 3
2009-01-02 00:43:38 PST
This only happens when right-clicking, not Ctrl-clicking. Also, (4) appears fixed in ToT - but not the primary issue.
Alexey Proskuryakov
Comment 4
2009-01-02 00:44:45 PST
<
rdar://problem/6471070
>
Alexey Proskuryakov
Comment 5
2009-02-09 08:38:53 PST
***
Bug 19961
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6
2009-02-11 03:46:03 PST
Created
attachment 27557
[details]
naive fix
Darin Adler
Comment 7
2009-02-11 06:17:17 PST
What does this do to the "select the word under the cursor" behavior when you right-click on non-editable text?
Alexey Proskuryakov
Comment 8
2009-02-11 10:41:32 PST
Words in non-editable text still do get selected when right-clicking.
Darin Adler
Comment 9
2009-03-13 12:29:20 PDT
Comment on
attachment 27557
[details]
naive fix r=me
Alexey Proskuryakov
Comment 10
2009-03-15 02:24:44 PDT
Committed <
http://trac.webkit.org/changeset/41715
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug