        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=19737
        No cursor and paste not enabled right clicking text field/area

        Test: fast/events/right-click-focus.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMousePressEventSingleClick):
        (WebCore::EventHandler::handleMousePressEvent):
        Take normal code path for right clicks (we were taking it for Ctrl-clicks anyway).



Canonical link: https://commits.webkit.org/33774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41715 268f45cc-cd09-0410-ab3c-d52691b4dbfc